--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.0/dist/leaflet.css" />
-    <link rel="stylesheet" href="leaflet-search-master/leaflet-search-master/src/leaflet-search.css" /><!--receurda siempre llamar en este orden a las librearías del buscador-->
+    <link rel="stylesheet" href="https://librekcesar.github.io/mapa_recolecciones/leaflet-search-master/leaflet-search-master/src/leaflet-search.css" /><!--receurda siempre llamar en este orden a las librearías del buscador-->
     <script src="https://unpkg.com/leaflet@1.3.0/dist/leaflet.js"></script>
-    <script src="leaflet-search-master/leaflet-search-master/src/leaflet-search.js"></script>
+    <script src="https://librekcesar.github.io/mapa_recolecciones/leaflet-search-master/leaflet-search-master/src/leaflet-search.js"></script>
     <script type="text/javascript" src="poligonos_zonas_v63_vs53_recos_copia.js"></script>
     <style>
         #map { 
