--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.0/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.3.0/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://librekcesar.github.io/mapa_recolecciones/leaflet-search-master/leaflet-search-master/src/leaflet-search.css" /><!--receurda siempre llamar en este orden a las librearías del buscador-->
     <script src="https://librekcesar.github.io/mapa_recolecciones/leaflet-search-master/leaflet-search-master/src/leaflet-search.js"></script>
-    <script type="text/javascript" src="poligonos_zonas_v63_vs53_recos_copia.js"></script>
+    
     <style>
         #map { 
             width: 100%;
@@ -17,6 +17,10 @@
 </head>
 <body>
     <div id="map"></div>
+    
+    <script src="https://unpkg.com/leaflet@1.3.0/dist/leaflet.js"></script>
+    <script src="https://librekcesar.github.io/mapa_recolecciones/leaflet-search-master/leaflet-search-master/src/leaflet-search.js"></script>  
+    <script type="text/javascript" src="poligonos_zonas_v63_vs53_recos_copia.js"></script>
     <script>
         var map = L.map("map").setView([19.506, -99.163], 11);
         L.tileLayer("http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
